# cv-maker

./: README.md  docker-compose.yaml  manage.py  pyproject.toml
core/: models.py
core/migrations/: 0001_initial.py
cv/: forms.py  models.py  views.py
cv/migrations/: 0001_initial.py  0002_rename_skill_name_skill_name.py
cv/templates/cv/: index.html
cvmaker/: asgi.py  urls.py  wsgi.py
cvmaker/settings/: common.py  dev.py  prod.py
templates/: base.html
